turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:11: error: type mismatch;
 found   : Unit
 required: Int
			state=NextState(state, c, rule);
                                       ^